2004-03-01  Morten Welinder  <terra@gnome.org>

	* gtk/gtkfilesystemunix.c (filename_get_info): Only stat when
	needed.

	* gtk/gtkfilesystemmodel.c (file_model_node_is_visible): Simplify
	semantics and check for errors.

	* gtk/gtkpathbar.c (gtk_path_bar_set_path): Propagate errors.

	* gtk/gtkfilefilter.c (gtk_file_filter_filter): Don't crash if
	display_name is NULL.

Mon Mar  1 14:16:52 2004  Owen Taylor  <otaylor@redhat.com>

	Based on patch by Alex Larsson

	* gtk/gtkfilechooserdefault.c: Use gtk-file-chooser-backend
	GtkSetting to set the backend if the app doesn't specify one.

	* gdk/x11/gdkevents-x11.c gtk/gtksettings.c:
	Add Gtk/FileChooserBackend.

Mon Mar  1 20:32:06 2004  Tim Janik  <timj@gtk.org>

        * autogen.sh:
        - exit with $? instead of 1 in case of failure
        - exit with $? if ./configure failed
          (that's so autogen.sh && make lines work)
        - removed --enable-gtk-doc option
        - added $AUTOGEN_CONFIGURE_ARGS

2004-03-01  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (list_model_filter_func): Test for
	filter_info.uri correctly.  Fixes #135379, pointed out by Damon
	Chaplin.
	(shortcuts_get_index): Compute the bookmarks index correctly.
	Fixes #135714, pointed out by Damon Chaplin.
	(gtk_file_chooser_default_list_shortcut_folders): Handle the case
	with no shortcuts, and don't run off the end of the list if there
	are no bookmarks and their separator.  Fixes #135572, patch by
	Damon Chaplin.

Mon Mar  1 12:23:06 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklabel.c: Handle dynamically resolved bidi direction
	when drawing the cursor. (#118541)

	* gtk/gtkentry.c (get_better_cursor_x): Use entry->resolved_dir;

	* gtk/gtkentry.c (draw_insertion_cursor): Fix up
	some confusion in parameter ordering.

Mon Mar  1 12:05:54 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkfilechooserdialog.c
	(file_chooser_widget_resizable_hints_changed): Handle
	shrinking/growing.
